# llm-ts-example

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update.sh
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql-analysis.yml  deploy.yml  opencode.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
agent-mastra/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agents/agent-ai-sdk/: .gitignore  README.md  cdk.json  eslint.config.ts  package.json  tsconfig.json
agents/agent-claude-agent-sdk/: eslint.config.ts  package.json  tsconfig.json
agents/agent-deepagents/: .gitignore  eslint.config.ts  package.json
agents/agent-koog/: README.md  build.gradle.kts  settings.gradle.kts
agents/agent-langchain-nextjs/: README.md  eslint.config.ts  package.json  tsconfig-eslint.json
app/: eslint.config.mjs  index.html  package.json
basic/: pnpm-lock.yaml
cdk/: .gitignore  cdk.json  eslint.config.d.mts  eslint.config.mjs  package.json  poku.config.js  tsconfig.json  vite.config.ts
chat-app/: README.md  eslint.config.ts  package.json
graphrag-local/: README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mpc/: .gitignore
node-llama-cpp/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rag/: package.json  pnpm-lock.yaml
ragas/: evalate.py  pyproject.toml
webllm/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
(+339 files in other folders)
